--- a/02_clasif_s.ipynb
+++ b/02_clasif_s.ipynb
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "data=pd.read_csv('/home/dimas/Desktop/data/Book4.csv', encoding='cp1251')\n",
+    "data=pd.read_csv('~/Book4.csv', encoding='cp1251')\n",
     "data = data.astype('str')\n",
     "data.dropna()\n",
     "data.describe()"
